--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="new_expense">New expense</string>
     <string name="new_account">New account</string>
     <string name="my_accounts">My accounts</string>
-    <string name="config">Settings</string>
+    <string name="my_expenses">My expenses</string>
     <string name="account_name">Acc Name:</string>
     <string name="account_value">Acc value:</string>
     <string name="accept_button">Accept</string>
